[FIX] Issue with footer where size sm- would overlap
Footer contents (copyright and social media) overlapped due to display:
absolute. Fixed this by using media query to only display absolute in
md+.

Swapped out 70px mini-icons with 40px ones.

--- a/css/css-overload.css
+++ b/css/css-overload.css
@@ -25,6 +25,12 @@
 		padding-top: 25px;
 		padding-between: 25px;
 	}
+	footer {
+		margin: 20px 0;
+	}
+	footer .copyright-col {
+		padding-bottom: 20px;
+	}
 }
 
 @media (min-width: 768px) {
@@ -32,6 +38,16 @@
 		padding-top: 10px;
 		padding-bottom: 10px;
 		line-height: 55px;
+	}
+}
+
+@media (min-width: 992px) {
+	footer {
+		margin: 15px 0;
+	}
+	footer .copyright {
+		position: absolute;
+		margin-top: 10px;
 	}
 }
 
@@ -79,12 +95,4 @@
 	width: 40px;
 	margin-left: 5px;
 	margin-right: 5px;
-}
-
-footer {
-  margin: 15px 0;
-}
-footer .copyright {
-	position: absolute;
-	margin-top: 10px;
 }
